--- a/Kaiserreich Korean Translation/localisation/KR_Countries_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Countries_l_english.yml
@@ -1736,67 +1736,67 @@ DKB_national_populist:0 "Don-Kuban Union"
 DKB_national_populist_ADJ:0 "Don-Kuban"
 DKB_national_populist_DEF:0 "The Don-Kuban Union"
 
-DMK_totalist:0 "Mittelmeer-Kommune"
-DMK_totalist_ADJ:0 "Mittelmeer"
-DMK_totalist_DEF:0 "The Mittelmeer-Kommune"
-DMK_syndicalist:0 "Mittelmeer-Kommune"
-DMK_syndicalist_ADJ:0 "Mittelmeer"
-DMK_syndicalist_DEF:0 "The Mittelmeer-Kommune"
-DMK_radical_socialist:0 "Mittelmeer-Kommune"
-DMK_radical_socialist_ADJ:0 "Mittelmeer"
-DMK_radical_socialist_DEF:0 "The Mittelmeer-Kommune"
-DMK_social_democrat:0 "Deutsche Mittelmeer-Kompanie"
-DMK_social_democrat_ADJ:0 "Deutsch-Mittelmeer"
-DMK_social_democrat_DEF:0 "The Deutsche Mittelmeer-Kompanie"
-DMK_social_liberal:0 "Deutsche Mittelmeer-Kompanie"
-DMK_social_liberal_ADJ:0 "Deutsch-Mittelmeer"
-DMK_social_liberal_DEF:0 "The Deutsche Mittelmeer-Kompanie"
-DMK_market_liberal:0 "Deutsche Mittelmeer Kompanie"
-DMK_market_liberal_ADJ:0 "Deutsch-Mittelmeer"
-DMK_market_liberal_DEF:0 "The Deutsche Mittelmeer-Kompanie"
-DMK_social_conservative:0 "Deutsche Mittelmeer-Kompanie"
-DMK_social_conservative_ADJ:0 "Deutsch-Mittelmeer"
-DMK_social_conservative_DEF:0 "The Deutsche Mittelmeer-Kompanie"
-DMK_authoritarian_democrat:0 "Deutsche Mittelmeer-Kompanie"
-DMK_authoritarian_democrat_ADJ:0 "Deutsch-Mittelmeer"
-DMK_authoritarian_democrat_DEF:0 "The Deutsche Mittelmeer-Kompanie"
-DMK_paternal_autocrat:0 "Deutsche Mittelmeer-Kompanie"
-DMK_paternal_autocrat_ADJ:0 "Deutsch-Mittelmeer"
-DMK_paternal_autocrat_DEF:0 "The Deutsche Mittelmeer-Kompanie"
-DMK_national_populist:0 "Deutsche Mittelmeer-Kompanie"
-DMK_national_populist_ADJ:0 "Deutsch-Mittelmeer"
-DMK_national_populist_DEF:0 "The Deutsche Mittelmeer-Kompanie"
+DMK_totalist:0 "지중해 코뮌"
+DMK_totalist_ADJ:0 "지중해인"
+DMK_totalist_DEF:0 "지중해 코뮌"
+DMK_syndicalist:0 "지중해 코뮌"
+DMK_syndicalist_ADJ:0 "지중해인"
+DMK_syndicalist_DEF:0 "지중해 코뮌"
+DMK_radical_socialist:0 "지중해 코뮌"
+DMK_radical_socialist_ADJ:0 "지중해인"
+DMK_radical_socialist_DEF:0 "지중해 코뮌"
+DMK_social_democrat:0 "독일령 지중해 회사"
+DMK_social_democrat_ADJ:0 "독일령 지중해인"
+DMK_social_democrat_DEF:0 "독일령 지중해 회사"
+DMK_social_liberal:0 "독일령 지중해 회사"
+DMK_social_liberal_ADJ:0 "독일령 지중해인"
+DMK_social_liberal_DEF:0 "독일령 지중해 회사"
+DMK_market_liberal:0 "독일령 지중해 회사"
+DMK_market_liberal_ADJ:0 "독일령 지중해인"
+DMK_market_liberal_DEF:0 "독일령 지중해 회사"
+DMK_social_conservative:0 "독일령 지중해 회사"
+DMK_social_conservative_ADJ:0 "독일령 지중해인"
+DMK_social_conservative_DEF:0 "독일령 지중해 회사"
+DMK_authoritarian_democrat:0 "독일령 지중해 회사"
+DMK_authoritarian_democrat_ADJ:0 "독일령 지중해인"
+DMK_authoritarian_democrat_DEF:0 "독일령 지중해 회사"
+DMK_paternal_autocrat:0 "독일령 지중해 회사"
+DMK_paternal_autocrat_ADJ:0 "독일령 지중해인"
+DMK_paternal_autocrat_DEF:0 "독일령 지중해 회사"
+DMK_national_populist:0 "독일령 지중해 회사"
+DMK_national_populist_ADJ:0 "독일령 지중해인"
+DMK_national_populist_DEF:0 "독일령 지중해 회사"
 
-DNF_totalist:0 "Danubian Federation"
-DNF_totalist_ADJ:0 "Danubian"
-DNF_totalist_DEF:0 "The Danubian Federation"
-DNF_syndicalist:0 "Danubian Federation"
-DNF_syndicalist_ADJ:0 "Danubian"
-DNF_syndicalist_DEF:0 "The Danubian Federation"
-DNF_radical_socialist:0 "Danubian Federation"
-DNF_radical_socialist_ADJ:0 "Danubian"
-DNF_radical_socialist_DEF:0 "The Danubian Federation"
-DNF_social_democrat:0 "Danubian Federation"
-DNF_social_democrat_ADJ:0 "Danubian"
-DNF_social_democrat_DEF:0 "The Danubian Federation"
-DNF_social_liberal:0 "Danubian Federation"
-DNF_social_liberal_ADJ:0 "Danubian"
-DNF_social_liberal_DEF:0 "The Danubian Federation"
-DNF_market_liberal:0 "Danubian Federation"
-DNF_market_liberal_ADJ:0 "Danubian"
-DNF_market_liberal_DEF:0 "The Danubian Federation"
-DNF_social_conservative:0 "Danubian Federation"
-DNF_social_conservative_ADJ:0 "Danubian"
-DNF_social_conservative_DEF:0 "The Danubian Federation"
-DNF_authoritarian_democrat:0 "Danubian Federation"
-DNF_authoritarian_democrat_ADJ:0 "Danubian"
-DNF_authoritarian_democrat_DEF:0 "The Danubian Federation"
-DNF_paternal_autocrat:0 "Danubian Federation"
-DNF_paternal_autocrat_ADJ:0 "Danubian"
-DNF_paternal_autocrat_DEF:0 "The Danubian Federation"
-DNF_national_populist:0 "Danubian Federation"
-DNF_national_populist_ADJ:0 "Danubian"
-DNF_national_populist_DEF:0 "The Danubian Federation"
+DNF_totalist:0 "도나우 연방"
+DNF_totalist_ADJ:0 "도나우인"
+DNF_totalist_DEF:0 "도나우 연방"
+DNF_syndicalist:0 "도나우 연방"
+DNF_syndicalist_ADJ:0 "도나우인"
+DNF_syndicalist_DEF:0 "도나우 연방"
+DNF_radical_socialist:0 "도나우 연방"
+DNF_radical_socialist_ADJ:0 "도나우인"
+DNF_radical_socialist_DEF:0 "도나우 연방"
+DNF_social_democrat:0 "도나우 연방"
+DNF_social_democrat_ADJ:0 "도나우인"
+DNF_social_democrat_DEF:0 "도나우 연방"
+DNF_social_liberal:0 "도나우 연방"
+DNF_social_liberal_ADJ:0 "도나우인"
+DNF_social_liberal_DEF:0 "도나우 연방"
+DNF_market_liberal:0 "도나우 연방"
+DNF_market_liberal_ADJ:0 "도나우인"
+DNF_market_liberal_DEF:0 "도나우 연방"
+DNF_social_conservative:0 "도나우 연방"
+DNF_social_conservative_ADJ:0 "도나우인"
+DNF_social_conservative_DEF:0 "도나우 연방"
+DNF_authoritarian_democrat:0 "도나우 연방"
+DNF_authoritarian_democrat_ADJ:0 "도나우인"
+DNF_authoritarian_democrat_DEF:0 "도나우 연방"
+DNF_paternal_autocrat:0 "도나우 연방"
+DNF_paternal_autocrat_ADJ:0 "도나우인"
+DNF_paternal_autocrat_DEF:0 "도나우 연방"
+DNF_national_populist:0 "도나우 연방"
+DNF_national_populist_ADJ:0 "도나우인"
+DNF_national_populist_DEF:0 "도나우 연방"
 
 DOM_totalist:0 "Dominican Socialist Republic"
 DOM_totalist_ADJ:0 "Dominican"
@@ -3566,36 +3566,36 @@ MAD_national_populist:0 "Tamil Nadu"
 MAD_national_populist_ADJ:0 "Tamil"
 MAD_national_populist_DEF:0 "Tamil Nadu"
 
-MAF_totalist:0 "African Union"
-MAF_totalist_ADJ:0 "African"
-MAF_totalist_DEF:0 "The African Union"
-MAF_syndicalist:0 "African Union"
-MAF_syndicalist_ADJ:0 "African"
-MAF_syndicalist_DEF:0 "The African Union"
-MAF_radical_socialist:0 "African Union"
-MAF_radical_socialist_ADJ:0 "African"
-MAF_radical_socialist_DEF:0 "The African Union"
-MAF_social_democrat:0 "Afrikan Federation"
-MAF_social_democrat_ADJ:0 "Afrikan"
-MAF_social_democrat_DEF:0 "The Afrikan Federation"
-MAF_social_liberal:0 "Deutsch-Mittelafrika"
-MAF_social_liberal_ADJ:0 "Deutsch-Afrikan"
-MAF_social_liberal_DEF:0 "Deutsch-Mittelafrika"
-MAF_market_liberal:0 "Deutsch-Mittelafrika"
-MAF_market_liberal_ADJ:0 "Deutsch-Afrikan"
-MAF_market_liberal_DEF:0 "Deutsch-Mittelafrika"
-MAF_social_conservative:0 "Mittelafrika"
-MAF_social_conservative_ADJ:0 "Mittelafrikan"
-MAF_social_conservative_DEF:0 "Mittelafrika"
-MAF_authoritarian_democrat:0 "Deutsch-Mittelafrika"
-MAF_authoritarian_democrat_ADJ:0 "Deutsch-Afrikan"
-MAF_authoritarian_democrat_DEF:0 "Deutsch-Mittelafrika"
-MAF_paternal_autocrat:0 "Deutsch-Mittelafrika"
-MAF_paternal_autocrat_ADJ:0 "Deutsch-Afrikan"
-MAF_paternal_autocrat_DEF:0 "Deutsch-Mittelafrika"
-MAF_national_populist:0 "Deutsch-Mittelafrika"
-MAF_national_populist_ADJ:0 "Deutsch-Afrikan"
-MAF_national_populist_DEF:0 "Deutsch-Mittelafrika"
+MAF_totalist:0 "아프리카 연방"
+MAF_totalist_ADJ:0 "아프리카인"
+MAF_totalist_DEF:0 "아프리카 연방"
+MAF_syndicalist:0 "아프리카 연방"
+MAF_syndicalist_ADJ:0 "아프리카인"
+MAF_syndicalist_DEF:0 "아프리카 연방"
+MAF_radical_socialist:0 "아프리카 연방"
+MAF_radical_socialist_ADJ:0 "아프리카인"
+MAF_radical_socialist_DEF:0 "아프리카 연방"
+MAF_social_democrat:0 "아프리카 연방"
+MAF_social_democrat_ADJ:0 "아프리카인"
+MAF_social_democrat_DEF:0 "아프리카 연방"
+MAF_social_liberal:0 "독일령 중앙아프리카"
+MAF_social_liberal_ADJ:0 "독일령 아프리카인"
+MAF_social_liberal_DEF:0 "독일령 중앙아프리카"
+MAF_market_liberal:0 "독일령 중앙아프리카"
+MAF_market_liberal_ADJ:0 "독일령 아프리카인"
+MAF_market_liberal_DEF:0 "독일령 중앙아프리카"
+MAF_social_conservative:0 "중앙아프리카"
+MAF_social_conservative_ADJ:0 "중앙아프리카인"
+MAF_social_conservative_DEF:0 "중앙아프리카"
+MAF_authoritarian_democrat:0 "독일령 중앙아프리카"
+MAF_authoritarian_democrat_ADJ:0 "독일령 아프리카인"
+MAF_authoritarian_democrat_DEF:0 "독일령 중앙아프리카"
+MAF_paternal_autocrat:0 "독일령 중앙아프리카"
+MAF_paternal_autocrat_ADJ:0 "독일령 아프리카인"
+MAF_paternal_autocrat_DEF:0 "독일령 중앙아프리카"
+MAF_national_populist:0 "독일령 중앙아프리카"
+MAF_national_populist_ADJ:0 "독일령 아프리카인"
+MAF_national_populist_DEF:0 "독일령 중앙아프리카"
 
 MAG_totalist:0 "Madagaskar"
 MAG_totalist_ADJ:0 "Madagaskan"
@@ -3659,36 +3659,36 @@ MAL_national_populist:0 "Mali"
 MAL_national_populist_ADJ:0 "Malian"
 MAL_national_populist_DEF:0 "Mali"
 
-MAN_totalist:0 "Manchurian Socialist Republic"
-MAN_totalist_ADJ:0 "Manchurian"
-MAN_totalist_DEF:0 "The Manchurian Socialist Republic"
-MAN_syndicalist:0 "Manchurian Socialist Republic"
-MAN_syndicalist_ADJ:0 "Manchurian"
-MAN_syndicalist_DEF:0 "The Manchurian Socialist Republic"
-MAN_radical_socialist:0 "Manchurian Socialist Republic"
-MAN_radical_socialist_ADJ:0 "Manchurian"
-MAN_radical_socialist_DEF:0 "The Manchurian Socialist Republic"
-MAN_social_democrat:0 "Manchuria"
-MAN_social_democrat_ADJ:0 "Manchurian"
-MAN_social_democrat_DEF:0 "Manchuria"
-MAN_social_liberal:0 "Manchuria"
-MAN_social_liberal_ADJ:0 "Manchurian"
-MAN_social_liberal_DEF:0 "Manchuria"
-MAN_market_liberal:0 "Manchuria"
-MAN_market_liberal_ADJ:0 "Manchurian"
-MAN_market_liberal_DEF:0 "Manchuria"
-MAN_social_conservative:0 "Great Empire of Manchuria"
-MAN_social_conservative_ADJ:0 "Manchurian"
-MAN_social_conservative_DEF:0 "The Great Empire of Manchuria"
-MAN_authoritarian_democrat:0 "Great Empire of Manchuria"
-MAN_authoritarian_democrat_ADJ:0 "Manchurian"
-MAN_authoritarian_democrat_DEF:0 "The Great Empire of Manchuria"
-MAN_paternal_autocrat:0 "Great Empire of Manchuria"
-MAN_paternal_autocrat_ADJ:0 "Manchurian"
-MAN_paternal_autocrat_DEF:0 "The Great Empire of Manchuria"
-MAN_national_populist:0 "Great Empire of Manchuria"
-MAN_national_populist_ADJ:0 "Manchurian"
-MAN_national_populist_DEF:0 "The Great Empire of Manchuria"
+MAN_totalist:0 "만주 사회주의 공화국"
+MAN_totalist_ADJ:0 "만주인"
+MAN_totalist_DEF:0 "만주 사회주의 공화국"
+MAN_syndicalist:0 "만주 사회주의 공화국"
+MAN_syndicalist_ADJ:0 "만주인"
+MAN_syndicalist_DEF:0 "만주 사회주의 공화국"
+MAN_radical_socialist:0 "만주 사회주의 공화국"
+MAN_radical_socialist_ADJ:0 "만주인"
+MAN_radical_socialist_DEF:0 "만주 사회주의 공화국"
+MAN_social_democrat:0 "만주"
+MAN_social_democrat_ADJ:0 "만주인"
+MAN_social_democrat_DEF:0 "만주"
+MAN_social_liberal:0 "만주"
+MAN_social_liberal_ADJ:0 "만주인"
+MAN_social_liberal_DEF:0 "만주"
+MAN_market_liberal:0 "만주"
+MAN_market_liberal_ADJ:0 "만주인"
+MAN_market_liberal_DEF:0 "만주"
+MAN_social_conservative:0 "대 만주 제국"
+MAN_social_conservative_ADJ:0 "만주인"
+MAN_social_conservative_DEF:0 "대 만주 제국"
+MAN_authoritarian_democrat:0 "대 만주 제국"
+MAN_authoritarian_democrat_ADJ:0 "만주인"
+MAN_authoritarian_democrat_DEF:0 "대 만주 제국"
+MAN_paternal_autocrat:0 "대 만주 제국"
+MAN_paternal_autocrat_ADJ:0 "만주인"
+MAN_paternal_autocrat_DEF:0 "대 만주 제국"
+MAN_national_populist:0 "대 만주 제국"
+MAN_national_populist_ADJ:0 "만주인"
+MAN_national_populist_DEF:0 "대 만주 제국"
 
 MEE_totalist:0 "Mexican Empire"
 MEE_totalist_ADJ:0 "Mexican"
@@ -6635,36 +6635,36 @@ TUN_national_populist:0 "Tunisia"
 TUN_national_populist_ADJ:0 "Tunisian"
 TUN_national_populist_DEF:0 "Tunisia"
 
-TUR_totalist:0 "Turkish Commune"
-TUR_totalist_ADJ:0 "Turkish"
-TUR_totalist_DEF:0 "The Turkish Commune"
-TUR_syndicalist:0 "Turkish Commune"
-TUR_syndicalist_ADJ:0 "Turkish"
-TUR_syndicalist_DEF:0 "The Turkish Commune"
-TUR_radical_socialist:0 "Turkish Commune"
-TUR_radical_socialist_ADJ:0 "Turkish"
-TUR_radical_socialist_DEF:0 "The Turkish Commune"
-TUR_social_democrat:0 "Turkey"
-TUR_social_democrat_ADJ:0 "Turkish"
-TUR_social_democrat_DEF:0 "Turkey"
-TUR_social_liberal:0 "Turkey"
-TUR_social_liberal_ADJ:0 "Turkish"
-TUR_social_liberal_DEF:0 "Turkey"
-TUR_market_liberal:0 "Turkey"
-TUR_market_liberal_ADJ:0 "Turkish"
-TUR_market_liberal_DEF:0 "Turkey"
-TUR_social_conservative:0 "Turkey"
-TUR_social_conservative_ADJ:0 "Turkish"
-TUR_social_conservative_DEF:0 "Turkey"
-TUR_authoritarian_democrat:0 "Turkey"
-TUR_authoritarian_democrat_ADJ:0 "Turkish"
-TUR_authoritarian_democrat_DEF:0 "Turkey"
-TUR_paternal_autocrat:0 "Turkey"
-TUR_paternal_autocrat_ADJ:0 "Turkish"
-TUR_paternal_autocrat_DEF:0 "Turkey"
-TUR_national_populist:0 "Turkish State"
-TUR_national_populist_ADJ:0 "Turkish"
-TUR_national_populist_DEF:0 "The Turkish State"
+TUR_totalist:0 "터키 코뮌"
+TUR_totalist_ADJ:0 "터키인"
+TUR_totalist_DEF:0 "터키 코뮌"
+TUR_syndicalist:0 "터키 코뮌"
+TUR_syndicalist_ADJ:0 "터키인"
+TUR_syndicalist_DEF:0 "터키 코뮌"
+TUR_radical_socialist:0 "터키 코뮌"
+TUR_radical_socialist_ADJ:0 "터키인"
+TUR_radical_socialist_DEF:0 "터키 코뮌"
+TUR_social_democrat:0 "터키"
+TUR_social_democrat_ADJ:0 "터키인"
+TUR_social_democrat_DEF:0 "터키"
+TUR_social_liberal:0 "터키"
+TUR_social_liberal_ADJ:0 "터키인"
+TUR_social_liberal_DEF:0 "터키"
+TUR_market_liberal:0 "터키"
+TUR_market_liberal_ADJ:0 "터키인"
+TUR_market_liberal_DEF:0 "터키"
+TUR_social_conservative:0 "터키"
+TUR_social_conservative_ADJ:0 "터키인"
+TUR_social_conservative_DEF:0 "터키"
+TUR_authoritarian_democrat:0 "터키"
+TUR_authoritarian_democrat_ADJ:0 "터키인"
+TUR_authoritarian_democrat_DEF:0 "터키"
+TUR_paternal_autocrat:0 "터키"
+TUR_paternal_autocrat_ADJ:0 "터키인"
+TUR_paternal_autocrat_DEF:0 "터키"
+TUR_national_populist:0 "터키국"
+TUR_national_populist_ADJ:0 "터키인"
+TUR_national_populist_DEF:0 "터키국"
 
 UGA_totalist:0 "Uganda"
 UGA_totalist_ADJ:0 "Ugandan"
