--- a/Kaiserreich Korean Translation/localisation/KR_Soviet_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Soviet_l_english.yml
@@ -4,40 +4,40 @@
 SOV_COL_END:0 "Agrarian Workerhood"
 SOV_COL_MILITIA:0 "Communal Militias"
 SOV_IND_ARMY:0 "Industrial Army"
-SOV_ELECT_MIL:0 "Army faction"
+SOV_ELECT_MIL:0 "군 팩션Army faction"
 SOV_ELECT_NAT:0 "National-Syndicalist faction"
-SOV_ELECT_KGB:0 "NKVD takeover"
-SOV_ELECT_LEN:0 "New-Leninist faction"
-SOV_ELECT_TRU:0 "True Syndicalism faction"
+SOV_ELECT_KGB:0 "NKVD 탈취takeover"
+SOV_ELECT_LEN:0 "신-레닌주의 팩션New-Leninist faction"
+SOV_ELECT_TRU:0 "진정한 노조주의 팩션True Syndicalism faction"
 SOV_ELECT_REV:0 "World Revolution faction"
 land_bonus:0 "Frunze's genius"
-SOV_RES_FRUNZE:0 "Russian language education"
-SOV_CULTURE_FRUNZE:0 "New Russian culture"
+SOV_RES_FRUNZE:0 "러시아어 교육Russian language education"
+SOV_CULTURE_FRUNZE:0 "새로운 러시아 문화ew Russian culture"
 SOYUZMULTFILM:0 "Soviet Animation"
 SOV_ARMY_RED:0 "Soldiers of the union"
-SOV_RES_SOV:0 "Soviet academia"
-SOV_REPUB:0 "Soviet Republics"
-TUKH_REVOLT:0 "World revolution"
+SOV_RES_SOV:0 "소비에트 학계Soviet academia"
+SOV_REPUB:0 "소비에트 공화국Soviet Republics"
+TUKH_REVOLT:0 "세계 혁명World revolution"
 TUKH_SCI:0 "United humanity"
 TUKH_PROP:0 "Transcontinental broadcasts"
-EXP_REV:0 "Exporting the revolution"
+EXP_REV:0 "혁명 수출Exporting the revolution"
 unlock_soviet:0 "You must unlock additional comrades"
 
 ### Opinion Modifiers ###
-SOV_UNI:0 "SOVNARKOM established"
-SOV_INT:0 "World revolution"
+SOV_UNI:0 "SOVNARKOM 설립established"
+SOV_INT:0 "세계 혁명World revolution"
 SOV_REC:0 "Recognised independence"
-SOV_IDE:0 "Ideological differences"
-SOV_FRI:0 "Soviet-American cooperation treaty"
+SOV_IDE:0 "이데올로기적 차이Ideological differences"
+SOV_FRI:0 "소비에트-미국 협력 조약Soviet-American cooperation treaty"
 SOV_POL:0 "Polish Business"
 
 ### Ideologies ###
-SOV_totalist:0 "Soviet Republic"
-SOV_radical_socialist:0 "Soviet Russia"
-SOV_syndicalist:0 "Soviet Union"
-SOV_totalist_party:0 "Internationalists"
-SOV_syndicalist_party:0 "Federalists"
-SOV_radical_socialist_party:0 "Autonomists"
+SOV_totalist:0 "소비에트 공화국"
+SOV_radical_socialist:0 "소비에트 러시아"
+SOV_syndicalist:0 "소비에트 연방"
+SOV_totalist_party:0 "국제주의자"
+SOV_syndicalist_party:0 "연방주의자"
+SOV_radical_socialist_party:0 "자치주의자"
 
 ### Focuses ###
 SOV_FRUNZE:0 "Elect Frunze's Autonomists!"
@@ -78,7 +78,7 @@ SOV_FILM:0 "Soyuzmultfilm"
 SOV_FILM_desc:0 "We have created an animation studio comprised of talented individuals from all over the union, as well as foreign defectors from Japan and the USA, and have started making quality animation for the whole world to see."
 SOV_ARMY:0 "Soldiers of the Union"
 SOV_ARMY_desc: "By including warriors and tactics from all over the union into the red army doctrine we can give our army an edge over our enemies."
-SOV_RES:0 "Soviet Academia"
+SOV_RES:0 "소비에트 학계Soviet Academia"
 SOV_RES_desc:0 "The advancement of science has a key role in the success of the revolution. We must invest in education to create a generation of engineers and scientists!"
 SOV_REPUBLICS:0 "The Soviet Republics"
 SOV_REPUBLICS_desc:0 "The division of the old Tsarist lands into various self-governing national republics have reduced much of the stress that would normally be on a centralised state."
@@ -146,26 +146,26 @@ SOV_EUR_FIN_desc:0 "Karelia was lost to the reactionary Kingdom of Finland durin
 ### Domestic Events ###
 sovd.1.t:0 "Frunze declares victory"
 sovd.1.d:0 "Standing high on a pile of destroyed reactionary monuments in the recently reclaimed red square Mikhail Frunze announces his victory to his supporters in the first Soviet elections. With Soviet power, Russia will no longer be the punching bag of the world'"
-sovd.1.a:0 "A Soviet Russia will lead us to victory!"
+sovd.1.a:0 "소비에트 러시아는 우릴 승리르로 이끌 것이다!"
 sovd.1.b:0 "Let him keep his hat, though."
-sovd.2.t:0 "Bukharin announces victory"
+sovd.2.t:0 "부하린이 승리를 발표하다"
 sovd.2.d:0 "After working tirelessly to bring the Soviet state back to life and winning the first Soviet elections Bukharin addresses the Soviet people in a live radio broadcast from Petrograd, announcing his victory. He also declared that the city shall be renamed Leningrad in honour of the eternal revolutionary and the ideological visionary of the new Soviet Union."
-sovd.2.a:0 "The Soviet Union will never be broken!"
-sovd.3.t:0 "Tukhachevsky declares victory"
+sovd.2.a:0 "소비에트 연방은 결코 부서지지 않는다!"
+sovd.3.t:0 "투하체프스키가 승리를 선언하다"
 sovd.3.d:0 "In a major public event held in Moscow, attended by socialist revolutionaries and diplomats from all over the world, the newly elected Mikhail Tukhachevsky has promised support for fellow workers attempting to free themselves throughout the world. 'The new Soviet Republic is the homeland of all workers' - he was quoted saying."
 sovd.3.a:0 "From the Taiga to the British sea, the Soviet Republic is the strongest!"
-sovd.4.t:0 "Seize the means of production!"
+sovd.4.t:0 "생산 수단을 점령하다!"
 sovd.4.d:0 "With government support, workers throughout the country rise up against their employers and demand collective ownership over the means of production."
 sovd.4.a:0 "Great news!"
 sovd.5.t:0 "The Capital"
 sovd.5.d:0 "Either of Russia's historic capitals could become the home of our new socialist government. Where should we go?"
-sovd.5.a:0 "Leningrad!"
-sovd.5.b:0 "Moscow!"
-sovd.6.t:0 "Status of the Orthodox Church"
+sovd.5.a:0 "레닌그라드!"
+sovd.5.b:0 "모스크바!"
+sovd.6.t:0 "정교회의 지위"
 sovd.6.d:0 "Now that Soviet power has been established in Russia we must decide our stance towards the powerful Orthodox Church. The Church itself is still very important to the masses yet part of our doctrine insists that we have to destroy or significantly weaken religious organisations. What shall we do?"
 sovd.6.a:0 "Purge the Church from Russia and install state atheism!"
 sovd.6.b:0 "Leave the Church alone, a secular state will do."
-sovd.6.c:0 "Orthodoxy is our state religion!"
+sovd.6.c:0 "정교회는 우리 국교다!"
 sovd.7.t:0 "The clergy criticises the government"
 sovd.7.d:0 "A number of priests have voiced their disagreement with our policy of a secular and modern state. Even though this fact is of little importance we must keep in mind that religion plays a huge role in the average Russian's life."
 sovd.7.a:0 "Progress cannot be stopped!"
@@ -185,19 +185,19 @@ sovd.12.a:0 "Excellent!"
 sovd.13.t:0 "Peasant unrest"
 sovd.13.d:0 "Our attempts to rid Russia of its reactionary remnants, namely the Orthodox Church, were met with ferocious resistance from the peasantry. These dissenters have been crushed by our armed forces."
 sovd.13.a:0 "Oh well."
-sovd.14.t:0 "Nicolai Bukharin dies"
+sovd.14.t:0 "니콜라이 부하린의 죽음"
 sovd.14.d:0 "The leader of the VKP(b), also known as the All-Union Communist Party or the Bolsheviks, Nicolai Bukharin has passed away in his house in Moscow. While not as popular as some other party leaders he was one of the symbols of the new Soviet state. The Soviet people will remember Bukharin and his great deeds forever. His duties will be carried out by the SOVNARKOM until the general elections next year. SOVNARKOM has decided to build a Mausoleum in his honour which will be situated in the Red Square, and consist of a big tower, crowned with a sculpture of Bukharin, to glorify their friend and comrade."
-sovd.14.a:0 "Goodbye, Nikolai. You can now rest."
+sovd.14.a:0 "잘가게, 니콜라이. 넌 이제 쉬어도돼."
 sovd.15.t:0 "Mikhail Frunze is seriously ill"
 sovd.15.d:0 "Mikhail Frunze was hospitalised in the central Moscow hospital yesterday after suffering from severe nausea. His diagnosis was found to be stomach cancer and the doctors are saying that Frunze will live no more than a year. Out of respect to the now bedridden leader, elections won't be held until after his death."
 sovd.15.a:0 "The whole country shares his pain."
 sovd.16.t:0 "Marshal Tukhachevsky was killed!"
 sovd.16.d:0 "Marshal Tukhachevsky was on his way to the Kremlin yesterday when an unknown terrorist threw a bomb at him, killing the marshal and himself in the process. General Meretskov has become the Provisional leader of the country for the time being but who will direct Soviet policy? The second Soviet general elections, which will take place in 1946, will decide the general direction of our country."
-sovd.16.a:0 "No!"
+sovd.16.a:0 "안돼!"
 sovd.17.t:0 "National-Syndicalist faction"
 sovd.17.d:0 "Members of the Leningrad section of the VKP(b) have met with supporters from all over Soviet Russia. They want to create a National-Syndicalist state as was described by Benito Mussolini and Oswald Mosley. The main leaders of this movement are Alexander Kuznetsov and Petr Popkov. Their political programs are deemed dangerous by the other factions of the VKP(b)."
 sovd.17.a:0 "interesting"
-sovd.18.t:0 "The military faction"
+sovd.18.t:0 "군 팩션"
 sovd.18.d:0 "Some generals of the Soviet army, among them Georgiy Zhukov and Ivan Konev, are ready to participate in the elections. Their aim is an overhaul of the military industrial sector and the continuation of the armed struggle against all enemies of Soviet Russia."
 sovd.18.a:0 "Is that so?"
 sovd.19.t:0 "Beria finds friends."
@@ -238,7 +238,7 @@ sovd.28.t:0 "Battleships overhaul finished"
 sovd.28.d:0 "The general overhaul of our obsolete battleships was successfully finished. They are ready to re-enter the service of the Soviet navy."
 
 ### Foreign Events ###
-sovf.1.t:0 "Bolshevism!"
+sovf.1.t:0 "볼셰비키즘!"
 sovf.1.d:0 "The Bolsheviks have regained control over Russia! What shall Menshevik Georgia's reaction to this new workers' state be?"
 sovf.1.a:0 "We shall propose an alliance of proletarian nations!"
 sovf.1.b:0 "We send out our congratulations!"
@@ -278,12 +278,12 @@ sovf.10.b:0 "Recognise Siberia and offer them an alliance."
 sovf.10.c:0 "Ignore them, they will not last long."
 sovf.11.t:0 "The Soviets recognised us"
 sovf.11.d:0 "As expected, the situation in European Russia did take a turn for the worse. The country has collapsed and a new Communist revolution has begun. Luckily, the new Bolshevik leadership seems more than willing to compromise. They offer an official recognition of our independence in exchange for a coordinated effort in fighting the current Russian government."
-sovf.11.a:0 "Excellent, now we are not alone!"
+sovf.11.a:0 "대단해, 이젠 우린 혼자가 아니다!"
 sovf.11.b:0 "Refuse, the Bolsheviks aren't to be dealt with!"
-sovf.12.t:0 "Siberia accepts!"
+sovf.12.t:0 "시베리아가 받아드렸다!"
 sovf.12.d:0 "The Siberian government has agreed to join forces in the war against the Russian regime."
 sovf.12.a:0 "Good!"
-sovf.13.t:0 "Siberia refuses!"
+sovf.13.t:0 "시베리아가 거절했다!"
 sovf.13.d:0 "The Siberian government has refused our generous offer to fight the oppressive Russian regime together. What shall we do?"
 sovf.13.a:0 "Let them be, their time will come!"
 sovf.13.b:0 "If they aren't with us they're against us!"
@@ -308,12 +308,12 @@ sovf.18.a:0 "We shall crush them!"
 sovf.19.t:0 "The integration of Don-Kuban Union"
 sovf.19.d:0 "The areas of the former Cossack state are now firmly integrated into our growing socialist motherland."
 sovf.19.a:0 "Great!"
-sovf.20.t:0 "Caucasian expansion"
+sovf.20.t:0 "코카서스 팽창"
 sovf.20.d:0 "Let us consider the political situation and choose our next step accordingly"
 sovf.20.a:0 "Georgia! For its rich soil and access to Armenia!"
 sovf.20.b:0 "Armenia! To gain advantage over the Turks!"
 sovf.20.c:0 "Azerbaijan! For its oil fields!"
-sovf.20.e:0 "Celebrate! Victory is ours!"
+sovf.20.e:0 "축하해라! 승리는 우리의 것이다!"
 sovf.21.t:0 "The Georgian Question"
 sovf.21.d:0 "Now that the state of Don-Kuban no longer exists we must choose our stance towards the independent state of Georgia. We can either try to bring them into the fold using the threat of military power or via more subtle ways of negotiation. Another option is to create an independent military bloc with Georgia. What shall we do?"
 sovf.21.a:0 "War will resolve this!"
@@ -390,16 +390,16 @@ sovf.43.b:0 "Establish the Far-Eastern Soviet Republic!"
 sovf.44.t:0 "The coup fails!"
 sovf.44.d:0 "Our attempted coup in Transamur failed after the army proved loyal to the admiralty. Our military high command is urging us to deploy the troops into Transamur."
 sovf.44.a:0 "Damned amateurs! Ready the troops!"
-sovf.45.t:0 "Soviet Coup!"
+sovf.45.t:0 "소비에트 쿠데타!"
 sovf.45.d:0 "Elements loyal to the Soviets have successfully executed a coup in our nation, and our annexation into the soviet state is imminent!"
 sovf.45.a:0 "Curses!"
-sovf.46.t:0 "Soviet takeover of Transamur"
+sovf.46.t:0 "소비에트가 트랜스아무르를 탈취하다"
 sovf.46.d:0 "Soviet Russia has managed to establish its control over the Transamur Republic. Their prime-minister has arrived in Vladivostok. Can we accept this diminishment of the Co-prosperity Sphere?"
 sovf.46.a:0 "How dare they insult Japan like this!? Attack!"
 sovf.46.b:0 "They're just reclaiming their own land..."
-sovf.47.t:0 "The integration of Transamur"
+sovf.47.t:0 "트렌스아무르 통합r"
 sovf.47.d:0 "The areas of the former state of Transamur are now firmly integrated into our growing socialist motherland."
-sovf.48.t:0 "The fate of Korea"
+sovf.48.t:0 "한국의 운명"
 sovf.48.d:0 "The Korean people have suffered for a very long time under the Japanese regime. It is now in our power to grant them their desired independence, is this in accordance with our plans?"
 sovf.48.a:0 "Grant them independence!"
 sovf.48.b:0 "Keep it under our direct control."
@@ -407,20 +407,20 @@ sovf.49.t:0 "Fading Sun"
 sovf.49.d:0 "We have lost control of our continental provinces. Now our homeland is directly threatened. Maybe we could appease the Soviets by offering them Korea, Port Arthur, Sakhalin and the Kuril Islands."
 sovf.49.a:0 "Offer territories for peace."
 sovf.49.b:0 "Fight on!"
-sovf.50.t:0 "Japan offers peace"
+sovf.50.t:0 "일본이 평화를 제안하다"
 sovf.50.d:0 "After we conquered their continental provinces Japan, fearing the might of our armed forces, begs for peace. They're offering us Korea, Port Arthur, Sakhalin and the Kuril Islands in exchange for the cessation of hostilities between our states."
-sovf.50.a:0 "Humiliate Japan!"
+sovf.50.a:0 "일본을 망신시켜라!"
 sovf.50.b:0 "We shall bring freedom to Japan as well!"
-sovf.51.t:0 "The fate of Manchuria"
+sovf.51.t:0 "만주의 운명"
 sovf.51.d:0 "With Japan's puppet state Fengtian finally crushed by the glorious Red Army the time has come to decide its fate. Shall we reincorporate it once more into our motherland or shall we restore its independence under our supervision? Another course of action could be the establishment of a new order, not just in Manchuria but in China as a whole!"
-sovf.51.a:0 "Restore independent Manchuria!"
-sovf.51.b:0 "Integrate Manchuria!"
+sovf.51.a:0 "독립 만주국을 부활시키다!"
+sovf.51.b:0 "만주를 통합시키다!"
 sovf.51.c:0 "Create the Soviet Republic of China!"
-sovf.52.t:0 "Integration of Korea"
+sovf.52.t:0 "한국의 통합"
 sovf.52.d:0 "The areas of the former state of Korea are now firmly integrated into our growing socialist motherland."
-sovf.53.t:0 "Integration of Manchuria"
+sovf.53.t:0 "만주의 통합"
 sovf.53.d:0 "The areas of the former state of Fengtian are now firmly integrated into our growing socialist motherland."
-sovf.54.t:0 "The Trans-Siberian Crisis"
+sovf.54.t:0 "트랜스-시베리아 위기"
 sovf.54.d:0 "Horrible news! A train full of Soviet citizens has been massacred by bandits on the Mongolian section of the Trans-Siberian railway! Our people are shocked by this act of barbarism and demand an immediate response from the government. Baron von Ungern-Sternberg, Supreme Khan of All Mongols, is getting stronger. This might be the perfect opportunity to stop his wild and savage men."
 sovf.54.a:0 "We demand full sovereignty over OUR Trans-Siberian railway!"
 sovf.54.b:0 "We must topple Sternberg!"
@@ -428,34 +428,34 @@ sovf.54.c:0 "We shall bring civilisation where there is barbarism, send the troo
 sovf.55.t:0 "Soviet Russia demands full control over the railroad"
 sovf.55.d:0 "After a train carrying Soviet citizens was attacked by bandits on our section of the Trans-Siberian railway the Soviet government has demanded full control over the railway. Soviet Russia is an increasingly powerful country and it is doubtful whether we could win in any confrontation with them."
 sovf.55.a:0 "We shall abandon our portion of the railroad."
-sovf.55.b:0 "Mobilise, Siberia is ours!"
-sovf.57.t:0 "The Bloody Baron"
-sovf.57.d:0 "Baron von Ungern-Sternberg has responded to our demands: one hundred ethnic Russians have been executed in Urga as a warning for us not to meddle in Mongolian affairs. He has also asserted Mongolia's historic right to Siberia. How should we react?"
-sovf.57.a:0 "Unacceptable, we shall wipe Mongolia from the map!"
-sovf.56.t:0 "The Baron agrees!"
+sovf.55.b:0 "군을 동원하라, 시베리아는 우리 것이다!"
+sovf.57.t:0 "피의 남작"
+sovf.57.d:0 "폰 운게른-스텐베르그 남작은 Baron von Ungern-Sternberg has responded to our demands: one hundred ethnic Russians have been executed in Urga as a warning for us not to meddle in Mongolian affairs. He has also asserted Mongolia's historic right to Siberia. How should we react?"
+sovf.57.a:0 "받아들일 수 없다, 우린 몽골을 지도에서 제거해야한다!"
+sovf.56.t:0 "남작이 받아들였다!"
 sovf.56.d:0 "Wishing to avoid a conflict with our superior forces Baron von Ungern-Sternberg have agreed to our demands and returned the railroad to Soviet control"
-sovf.56.a:0 "Urah!"
+sovf.56.a:0 "우라!"
 sovf.58.t:0 "Sukhbaatar's revolt!"
 sovf.58.d:0 "After a train carrying Soviet citizens was attacked by bandits on our section of the Trans-Siberian railway the Soviet government used its wide array of contacts, namely general Sukhbaatar and his lackeys, to instigate rebellion against our rightful government. How will the situation evolve?"
 sovf.58.a:0 "Baron von Ungern-Sternberg falls!"
 sovf.58.b:0 "The revolution is crushed!"
-sovf.59.t:0 "The revolution in Mongolia is successful"
+sovf.59.t:0 "몽골 혁명이 성공하다"
 sovf.59.d:0 "With aid from the soviet intelligence general Sukhbaatar and his lackeys we were able to overthrow Sternberg and take power in Mongolia!"
 sovf.59.a:0 "Another victory for the Soviet intelligence service!"
-sovf.60.t:0 "The revolution failed!"
+sovf.60.t:0 "혁명이 실패하다!"
 sovf.60.d:0 "Our attempt at deposing Khan Ungern have failed! The army urges we invade and save our comrades!"
-sovf.60.a:0 "ONWARDS!"
-sovf.61.t:0 "The fate of Mongolia"
+sovf.60.a:0 "앞으로!"
+sovf.61.t:0 "몽골의 운명"
 sovf.61.d:0 "With the rogue state of Mongolia finally crushed by the glorious Red Army the time has come to decide its fate. Shall we reincorporate it once more into our motherland or shall we preserve Mongolia's independence under our supervision?"
 sovf.61.a:0 "Restore independent Mongolia!"
-sovf.61.b:0 "Integrate Mongolia!"
+sovf.61.b:0 "몽골을 통합하다!"
 sovf.62.t:0 "Integration of the Trans-Siberian railroad"
 sovf.62.d:0 "The areas of the Trans-Siberian railroad are now firmly integrated into our growing socialist motherland."
-sovf.63.t:0 "Integration of Mongolia"
+sovf.63.t:0 "몽골의 통합"
 sovf.63.d:0 "The areas of the former state of Mongolia are now firmly integrated into our growing socialist motherland."
 sovf.64.t:0 "The Soviets wants to join us!"
 sovf.64.d:0 "The Soviet ambassador in Paris have placed a former offer from the Soviet government to join the Syndicalist international in the effort against Imperialism. How should we respond?"
-sovf.64.a:0 "Welcome aboard comrades!"
+sovf.64.a:0 "동지여 환영합니다!"
 sovf.64.b:0 "We're fine as it is. Refuse."
 sovf.65.t:0 "The French refuse!"
 sovf.65.d:0 "The French refused our offer to join the Syndicalist International!"
