--- a/Kaiserreich Korean Translation/localisation/KR_General_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_General_l_english.yml
@@ -3,7 +3,7 @@
 ### Loading Messages ###
 LOADING_GUI:0 "명예로운 평화에 서명하는 중"
 #"Loading GUI"
-LOADING_HISTORY:0 "트로츠키는 숨기는 중"
+LOADING_HISTORY:0 "트로츠키를 숨기는 중"
 #"Loading History"
 LOADING_SAVEGAME:0 "역사를 다시 쓰는 중: $NAME$"
 #"Loading savegame: $NAME$"
@@ -75,7 +75,7 @@ can_replace_hog:0 "총리 재임명 가능"
 ministers_cannot_be_replaced:0 "장관 재임명 불가"
 
 ### Factions ###
-Mittelmacht:0 "미텔오이로파"
+Mittelmacht:0 "중앙유럽공동체"
 Entente:0 "협상국"
 Belgrade_Pact:0 "베오그라드 조약"
 Third_International:0 "제3인터내셔널"
@@ -181,7 +181,7 @@ great_compromiser:0 "대타협가"
 ### Ideologies ###
 totalist:0 "전체주의자"
 syndicalist:0 "생디칼리스트"
-radical_socialist:0 "곱진사회주의자"
+radical_socialist:0 "급진사회주의자"
 social_democrat:0 "사회민주주의자"
 market_liberal:0 "시장자유주의자"
 social_conservative:0 "사회보수주의자"
@@ -193,7 +193,7 @@ social_liberal:0 "사회자유주의자"
 ### Drift ###
 totalist_drift:0 "매일 전체주의자 지원"
 syndicalist_drift:0 "매일 노동조합주의자 지원"
-radical_socialist_drift:0 "매일 곱진사회주의자 지원"
+radical_socialist_drift:0 "매일 급진사회주의자 지원"
 social_democrat_drift:0 "매일 사회민주주의자 지원"
 market_liberal_drift:0 "매일 시장자유주의자 지원"
 social_conservative_drift:0 "매일 사회보수주의자 지원"
@@ -339,65 +339,65 @@ small_ship_producer_mass_1:0 "Small Ship Manufacturer"
 small_ship_producer_mass_2:0 "Small Ship Manufacturer"
 
 ### General Industry ###
-chemical_producer:0 "Chemical Company"
-industrial_manufacturer:0 "Industrial Company"
-electronics_manufacturer:0 "Electronics Manufacturer"
+chemical_producer:0 "화학 회사"
+industrial_manufacturer:0 "산업 회사"
+electronics_manufacturer:0 "전자공학 제조사"
 
 ### Theorists ###
 
 ### Different stuff ###
-industry_theorist:0 "Industry Theorist"
-nuclear_theorist:0 "Nuclear Theorist"
-rocket_theorist:0 "Rocket Theorist"
-electronic_theorist:0 "Electronic Theorist"
+industry_theorist:0 "산업 이론가"
+nuclear_theorist:0 "핵 이론가"
+rocket_theorist:0 "로켓 이론가"
+electronic_theorist:0 "전기 이론가"
 
 ### Doctrines ###
 
 ### General ###
-air_doctrine_theorist:0 "Air Doctrine Theorist"
-naval_doctrine_theorist:0 "Naval Doctrine Theorist"
-land_doctrine_theorist:0 "Land Doctrine Theorist"
+air_doctrine_theorist:0 "공군 교리 이론가"
+naval_doctrine_theorist:0 "해군 교리 이론가"
+land_doctrine_theorist:0 "육군 교리 이론가"
 
 ### Land ###
-supperior_firepower_theorist:0 "Superior Firepower Theorist"
-mobile_warfare_theorist:0 "Mobile Warfare Theorist"
-trench_warfare_theorist:0 "Trench Warfare Theorist"
-mass_assault_theorist:0 "Mass Assault Theorist"
+supperior_firepower_theorist:0 "화력 우세 교리 이론가"
+mobile_warfare_theorist:0 "기동전 교리 이론가"
+trench_warfare_theorist:0 "참호전 교리 이론가"
+mass_assault_theorist:0 "대규모 돌격 교리 이론가"
 
 ### Air ###
-strategic_destruction_theorist:0 "Strategic Destruction Theorist"
-battlefield_support_theorist:0 "Battlefield Support Theorist"
-operational_integrity_theorist:0 "Operational Integrity Theorist"
+strategic_destruction_theorist:0 "전략적 파괴 교리 이론가"
+battlefield_support_theorist:0 "전장 지원 교리 이론가"
+operational_integrity_theorist:0 "작전상 무결성 교리 이론가"
 
 ### Naval ###
-fleet_in_being_theorist_theorist:0 "Fleet In Being Theorist"
-trade_interdiction_theorist:0 "Trade Interdiction Theorist"
-base_strike_theorist:0 "Base Strike Theorist"
+fleet_in_being_theorist_theorist:0 "현존 함대 이론가"
+trade_interdiction_theorist:0 "통상 파괴 이론가"
+base_strike_theorist:0 "기지 타격 이론가"
 
 ### Unit Type Theorists ###
 
 ### Air ###
-aircraft_theorist:0 "Aircraft Production Theorist"
-fighter_theorist:0 "Fighter Theorist"
-heavy_fighter_theorist:0 "Heavy Fighter Theorist"
-cas_theorist:0 "CAS Theorist"
-tac_theorist:0 "Tactical Bomber Theorist"
-strat_theorist:0 "Strategic Bomber Theorist"
-nav_theorist:0 "Naval Bomber Theorist"
+aircraft_theorist:0 "항공기 생산 이론가"
+fighter_theorist:0 "전투기 이론가"
+heavy_fighter_theorist:0 "중전투기 이론가"
+cas_theorist:0 "근접지상지원기 이론가"
+tac_theorist:0 "전술 폭격기 이론가"
+strat_theorist:0 "전략 폭격기 이론가"
+nav_theorist:0 "해상 폭격기 이론가"
 
 ### Tanks ###
-tank_theorist:0 "Tank Production Theorist"
-small_tank_theorist:0 "Small Tank Theorist"
-medium_tank_theorist:0 "Medium Tank Theorist"
-heavy_tank_theorist:0 "Heavy Tank Theorist"
+tank_theorist:0 "전차 생산 이론가"
+small_tank_theorist:0 "경전차 이론가"
+medium_tank_theorist:0 "중형 전차 이론가"
+heavy_tank_theorist:0 "중전차 이론가"
 
 ### General Arms ###
-arms_theorist:0 "Arms Production Theorist"
-infantry_equipment_theorist:0 "Infantry Equipment Theorist"
-support_equipment_theorist:0 "Support Equipment Theorist"
-art_theorist:0 "Artillery Theorist"
-motorized_theorist:0 "Motorised Equipment Theorist"
-marine_theorist:0 "Marine Equipment Theorist"
+arms_theorist:0 "총기 이론가"
+infantry_equipment_theorist:0 "보병 장비 이론가"
+support_equipment_theorist:0 "지원 장비 이론가"
+art_theorist:0 "대포 이론가"
+motorized_theorist:0 "차량화 장비 이론가"
+marine_theorist:0 "해병대 장비 이론가"
 
 ### General ###
 fighter_techs:0 "전투기 장비"
@@ -408,73 +408,73 @@ support_tech_research:0 "지원장비 연구 시간"
 ### Army Command Traits ###
 
 ### Land ###
-land_defense_1:0 "Defensive Doctrine"
-land_defense_2:0 "Defensive Doctrine"
-land_defense_3:0 "Defensive Doctrine"
+land_defense_1:0 "방어적 교리"
+land_defense_2:0 "방어적 교리"
+land_defense_3:0 "방어적 교리"
 
-land_offensive_1:0 "Offensive Doctrine"
-land_offensive_2:0 "Offensive Doctrine"
-land_offensive_3:0 "Offensive Doctrine"
+land_offensive_1:0 "공격적 교리"
+land_offensive_2:0 "공격적 교리"
+land_offensive_3:0 "공격적 교리"
 
-mobile_warfare_1:0 "Mobile Warfare"
-mobile_warfare_2:0 "Mobile Warfare"
-mobile_warfare_3:0 "Mobile Warfare"
+mobile_warfare_1:0 "기동전"
+mobile_warfare_2:0 "기동전"
+mobile_warfare_3:0 "기동전"
 
-entrenchment_1:0 "Weltkrieg Doctrine"
-entrenchment_2:0 "Weltkrieg Doctrine"
-entrenchment_3:0 "Weltkrieg Doctrine"
+entrenchment_1:0 "대전기 교리"
+entrenchment_2:0 "대전기 교리"
+entrenchment_3:0 "대전기 교리"
 
-morale_1:0 "Inspiring Leader"
-morale_2:0 "Inspiring Leader"
-morale_3:0 "Inspiring Leader"
+morale_1:0 "사기를 북돋는 지도자"
+morale_2:0 "사기를 북돋는 지도자"
+morale_3:0 "사기를 북돋는 지도자"
 
-organization_1:0 "Strategic Planner"
-organization_2:0 "Strategic Planner"
-organization_3:0 "Strategic Planner"
+organization_1:0 "전략적 계획가"
+organization_2:0 "전략적 계획가"
+organization_3:0 "전략적 계획가"
 
-attrition_1:0 "Careful Planner"
-attrition_2:0 "Careful Planner"
-attrition_3:0 "Careful Planner"
+attrition_1:0 "신중한 계획가"
+attrition_2:0 "신중한 계획가"
+attrition_3:0 "신중한 계획가"
 
-supply_use_1:0 "Logistical Planner"
-supply_use_2:0 "Logistical Planner"
-supply_use_3:0 "Logistical Planner"
+supply_use_1:0 "보급 계획가"
+supply_use_2:0 "보급 계획가"
+supply_use_3:0 "보급 계획가"
 
 ### Artillery ###
-artillery_offense_1:0 "Offensive Barrage"
-artillery_offense_2:0 "Offensive Barrage"
-artillery_offense_3:0 "Offensive Barrage"
+artillery_offense_1:0 "공격적 포격"
+artillery_offense_2:0 "공격적 포격"
+artillery_offense_3:0 "공격적 포격"
 
-artillery_defense_1:0 "Defensive Barrage"
-artillery_defense_2:0 "Defensive Barrage"
-artillery_defense_3:0 "Defensive Barrage"
+artillery_defense_1:0 "방어적 포격"
+artillery_defense_2:0 "방어적 포격"
+artillery_defense_3:0 "방어적 포격"
 
 ### Infantry ###
-infantry_offense_1:0 "Infantry Charge"
-infantry_offense_2:0 "Infantry Charge"
-infantry_offense_3:0 "Infantry Charge"
+infantry_offense_1:0 "보병 돌격"
+infantry_offense_2:0 "보병 돌격"
+infantry_offense_3:0 "보병 돌격"
 
-infantry_defense_1:0 "Infantry Defence"
-infantry_defense_2:0 "Infantry Defence"
-infantry_defense_3:0 "Infantry Defence"
+infantry_defense_1:0 "보병 방어"
+infantry_defense_2:0 "보병 방어"
+infantry_defense_3:0 "보병 방어"
 
 ### Tanks ###
-armored_offense_1:0 "Panzer Charge"
-armored_offense_2:0 "Panzer Charge"
-armored_offense_3:0 "Panzer Charge"
+armored_offense_1:0 "기갑 돌격"
+armored_offense_2:0 "기갑 돌격"
+armored_offense_3:0 "기갑 돌격"
 
-armored_defense_1:0 "Panzer Defence"
-armored_defense_2:0 "Panzer Defence"
-armored_defense_3:0 "Panzer Defence"
+armored_defense_1:0 "기갑 방어"
+armored_defense_2:0 "기갑 방어"
+armored_defense_3:0 "기갑 방어"
 
 ### Cavalry ###
-cavalry_offense_1:0 "Cavalry Charge"
-cavalry_offense_2:0 "Cavalry Charge"
-cavalry_offense_3:0 "Cavalry Charge"
+cavalry_offense_1:0 "기병 돌격"
+cavalry_offense_2:0 "기병 돌격"
+cavalry_offense_3:0 "기병 돌격"
 
-cavalry_defense_1:0 "Cavalry Defence"
-cavalry_defense_2:0 "Cavalry Defence"
-cavalry_defense_3:0 "Cavalry Defence"
+cavalry_defense_1:0 "기병 방어"
+cavalry_defense_2:0 "기병 방어"
+cavalry_defense_3:0 "기병 방어"
 
 ### Commando ###
 commando_offense_1:0 "Commando Charge"
@@ -486,71 +486,71 @@ commando_defense_2:0 "Commando Defence"
 commando_defense_3:0 "Commando Defence"
 
 ### XP ###
-army_reform_1:0 "Army Reformer"
-army_reform_2:0 "Army Reformer"
-army_reform_3:0 "Army Reformer"
+army_reform_1:0 "군 개혁가"
+army_reform_2:0 "군 개혁가"
+army_reform_3:0 "군 개혁가"
 
 ### Air ###
-concealment_1:0 "Concealment"
-concealment_2:0 "Concealment"
-concealment_3:0 "Concealment"
+concealment_1:0 "은엄폐 전문가"
+concealment_2:0 "은엄폐 전문가"
+concealment_3:0 "은엄폐 전문가"
 
-air_reform_1:0 "Air Reformer"
-air_reform_2:0 "Air Reformer"
-air_reform_3:0 "Air Reformer"
+air_reform_1:0 "공군 개혁가"
+air_reform_2:0 "공군 개혁가"
+air_reform_3:0 "공군 개혁가"
 
-air_safety_1:0 "Air Safety"
-air_safety_2:0 "Air Safety"
-air_safety_3:0 "Air Safety"
+air_safety_1:0 "항공 안전주의"
+air_safety_2:0 "항공 안전주의"
+air_safety_3:0 "항공 안전주의"
 
-air_night_operations_1:0 "Night Operations"
-air_night_operations_2:0 "Night Operations"
-air_night_operations_3:0 "Night Operations"
+air_night_operations_1:0 "야간전 전문가"
+air_night_operations_2:0 "야간전 전문가"
+air_night_operations_3:0 "야간전 전문가"
 
-air_ground_suppression_1:0 "Ground Suppression"
-air_ground_suppression_2:0 "Ground Suppression"
-air_ground_suppression_3:0 "Ground Suppression"
+air_ground_suppression_1:0 "지상 제압"
+air_ground_suppression_2:0 "지상 제압"
+air_ground_suppression_3:0 "지상 제압"
 
 air_weather_1:0 "All-Weather"
 air_weather_2:0 "All-Weather"
 air_weather_3:0 "All-Weather"
 
-air_ace_promoter_1:0 "Positive Heroism"
-air_ace_promoter_2:0 "Positive Heroism"
-air_ace_promoter_3:0 "Positive Heroism"
+air_ace_promoter_1:0 "긍정적 영웅주의"
+air_ace_promoter_2:0 "긍정적 영웅주의"
+air_ace_promoter_3:0 "긍정적 영웅주의"
 
-air_naval_strike_1:0 "Naval Strike"
-air_naval_strike_2:0 "Naval Strike"
-air_naval_strike_3:0 "Naval Strike"
+air_naval_strike_1:0 "해상 공격"
+air_naval_strike_2:0 "해상 공격"
+air_naval_strike_3:0 "해상 공격"
 
-air_bomber_interception_1:0 "Bomber Interception"
-air_bomber_interception_2:0 "Bomber Interception"
-air_bomber_interception_3:0 "Bomber Interception"
+air_bomber_interception_1:0 "폭격 저지"
+air_bomber_interception_2:0 "폭격 저지"
+air_bomber_interception_3:0 "폭격 저지"
 
-air_air_superiority_1:0 "Air Superiority"
-air_air_superiority_2:0 "Air Superiority"
-air_air_superiority_3:0 "Air Superiority"
+air_air_superiority_1:0 "제공권 장악"
+air_air_superiority_2:0 "제공권 장악"
+air_air_superiority_3:0 "제공권 장악"
 
-air_close_air_support_1:0 "Close Air Support"
-air_close_air_support_2:0 "Close Air Support"
-air_close_air_support_3:0 "Close Air Support"
+air_close_air_support_1:0 "근접 항공 지원"
+air_close_air_support_2:0 "근접 항공 지원"
+air_close_air_support_3:0 "근접 항공 지원"
 
-air_strategic_bombing_1:0 "Strategic Bombing"
-air_strategic_bombing_2:0 "Strategic Bombing"
-air_strategic_bombing_3:0 "Strategic Bombing"
+air_strategic_bombing_1:0 "전략 폭격"
+air_strategic_bombing_2:0 "전략 폭격"
+air_strategic_bombing_3:0 "전략 폭격"
 
-air_tactical_bombing_1:0 "Tactical Bombing"
-air_tactical_bombing_2:0 "Tactical Bombing"
-air_tactical_bombing_3:0 "Tactical Bombing"
+air_tactical_bombing_1:0 "전술 폭격"
+air_tactical_bombing_2:0 "전술 폭격"
+air_tactical_bombing_3:0 "전술 폭격"
 
-air_airborne_1:0 "Airborne Assault"
-air_airborne_2:0 "Airborne Assault"
-air_airborne_3:0 "Airborne Assault"
+air_airborne_1:0 "공수 강하"
+air_airborne_2:0 "공수 강하"
+air_airborne_3:0 "공수 강하"
 
 ### Naval ###
-navy_chief_naval_aviation_1:0 "Naval Aviation"
-navy_chief_naval_aviation_2:0 "Naval Aviation"
-navy_chief_naval_aviation_3:0 "Naval Aviation"
+navy_chief_naval_aviation_1:0 "해상 항공전"
+navy_chief_naval_aviation_2:0 "해상 항공전"
+navy_chief_naval_aviation_3:0 "해상 항공전"
 
 navy_chief_decisive_battle_1:0 "Decisive Battle Doctrine"
 navy_chief_decisive_battle_2:0 "Decisive Battle Doctrine"
@@ -560,27 +560,27 @@ navy_chief_commerce_raiding_1:0 "Commerce Raiding Doctrine"
 navy_chief_commerce_raiding_2:0 "Commerce Raiding Doctrine"
 navy_chief_commerce_raiding_3:0 "Commerce Raiding Doctrine"
 
-navy_chief_reform_1:0 "Naval Reformer"
-navy_chief_reform_2:0 "Naval Reformer"
-navy_chief_reform_3:0 "Naval Reformer"
+navy_chief_reform_1:0 "해군 개혁가"
+navy_chief_reform_2:0 "해군 개혁가"
+navy_chief_reform_3:0 "해군 개혁가"
 
-navy_chief_maneuver_1:0 "Naval Manoeuvre"
-navy_chief_maneuver_2:0 "Naval Manoeuvre"
-navy_chief_maneuver_3:0 "Naval Manoeuvre"
+navy_chief_maneuver_1:0 "해상 기동"
+navy_chief_maneuver_2:0 "해상 기동"
+navy_chief_maneuver_3:0 "해상 기동"
 
-navy_anti_submarine_1:0 "Anti-Submarine"
-navy_anti_submarine_2:0 "Anti-Submarine"
-navy_anti_submarine_3:0 "Anti-Submarine"
+navy_anti_submarine_1:0 "대함전"
+navy_anti_submarine_2:0 "대함전"
+navy_anti_submarine_3:0 "대함전"
 
-navy_naval_air_defense_1:0 "Naval Air Defence"
-navy_naval_air_defense_2:0 "Naval Air Defence"
-navy_naval_air_defense_3:0 "Naval Air Defence"
+navy_naval_air_defense_1:0 "해상 방공망"
+navy_naval_air_defense_2:0 "해상 방공망"
+navy_naval_air_defense_3:0 "해상 방공망"
 
-navy_fleet_logistics_1:0 "Fleet Logistics"
-navy_fleet_logistics_2:0 "Fleet Logistics"
-navy_fleet_logistics_3:0 "Fleet Logistics"
+navy_fleet_logistics_1:0 "함대 보급"
+navy_fleet_logistics_2:0 "함대 보급"
+navy_fleet_logistics_3:0 "함대 보급"
 
-navy_amphibious_assault_1:0 "Amphibious Assault"
+navy_amphibious_assault_1:0 "수륙 양용전"
 navy_amphibious_assault_2:0 "Amphibious Assault"
 navy_amphibious_assault_3:0 "Amphibious Assault"
 
