--- a/Kaiserreich Korean Translation/localisation/KR_Japan_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Japan_l_english.yml
@@ -1,33 +1,33 @@
 ﻿l_english:
 
 ### Opinion Modifiers ###
-JAP_motor_1:0 "Japanification of the Motor Industries"
+JAP_motor_1:0 "자동차 산업의 일본화"
 
 ### Parties ###
-JAP_syndicalist_party:0 "Kyōsan-tō"
-JAP_social_democrat_party:0 "Shakai Taishūtō"
-JAP_social_liberal_party:0 "Kakushintō"
-JAP_authoritarian_democrat_party:0 "Shōwakai"
-JAP_market_liberal_party:0 "Minseitō"
-JAP_social_conservative_party:0 "Seiyūkai"
-JAP_paternal_autocrat_party:0 "Kokumin Dōmei"
-JAP_authoritarian_democrat_party2:0 "IRAS"
-JAP_national_populist_party:0 "Tōhōkai"
-JAP_syndicalist_party_long:0 "Nihon Kyōsan-tō (Japanese Syndicalist Party)"
-JAP_social_democrat_party_long:0 "Shakai Taishūtō (Socialist Masses Party)"
-JAP_social_liberal_party_long:0 "Kakushintō (Reformist Party)"
-JAP_authoritarian_democrat_party_long:0 "Shōwakai (Shōwa Society)"
-JAP_market_liberal_party_long:0 "Rikken Minseitō (Constitutional Democratic Party)"
-JAP_social_conservative_party_long:0 "Rikken Seiyūkai (Constitutional Association of Political Friendship)"
-JAP_paternal_autocrat_party_long:0 "Kokumin Dōmei (National Alliance)"
-JAP_authoritarian_democrat_party_long2:0 "Imperial Rule Assistance Society"
-JAP_national_populist_party_long:0 "Tōhōkai (Society of the East)"
+JAP_syndicalist_party:0 "공산당"
+JAP_social_democrat_party:0 "사회 대중당"
+JAP_social_liberal_party:0 "혁신당"
+JAP_authoritarian_democrat_party:0 "쇼와회"
+JAP_market_liberal_party:0 "민정당"
+JAP_social_conservative_party:0 "정우회"
+JAP_paternal_autocrat_party:0 "국민 동맹"
+JAP_authoritarian_democrat_party2:0 "대정익찬회"
+JAP_national_populist_party:0 "동방회"
+JAP_syndicalist_party_long:0 "일본 공산당"
+JAP_social_democrat_party_long:0 "사회 대중당"
+JAP_social_liberal_party_long:0 "혁신당"
+JAP_authoritarian_democrat_party_long:0 "쇼와회"
+JAP_market_liberal_party_long:0 "입헌 민정당"
+JAP_social_conservative_party_long:0 "입헌 정우회"
+JAP_paternal_autocrat_party_long:0 "국민 동맹"
+JAP_authoritarian_democrat_party_long2:0 "대정익찬회"
+JAP_national_populist_party_long:0 "동방회"
 
 ### Ideas ###
-japan_NSA_act:0 "National Security Act"
-niigata_riots:0 "Niigata Riots"
-JAP_imperial_gov:0 "For The Empire!"
-JAP_DEM_GOV:0 "Eastern Democracy"
+japan_NSA_act:0 "국가보안법"
+niigata_riots:0 "니가타 민란"
+JAP_imperial_gov:0 "황국을 위하여!"
+JAP_DEM_GOV:0 "동양의 민주주의"
 control_faction:0 "Chuuha Faction"
 Fund_Adjustment_Ordinance:0 "The Fund Adjustment Ordinance"
 Fund_Adjustment_Ordinance_desc:0 "The Fund Adjustment Ordinance is the first of a series of 'National Defence Ordinances' decreed by the Centralist regime. The state-owned Bank of Japan is now empowered to the regulation capital investments, the establishment of companies, and the subscription or underwriting of securities. This will allow the Government to control and allocate funds into war industries."
@@ -39,51 +39,51 @@ National_Service_Draft_Ordinance_1:0 "The National Service Draft Ordinance"
 National_Service_Draft_Ordinance_1_desc:0 "The National Service Draft Ordinance is a supplement to the earlier National Total Mobilisation Ordinance, particularly its Article 4, which had enabled the Government to mobilise the labour force. The new Ordinance authorises the Government to conscript workers for war industries."
 National_Service_Draft_Ordinance_2:0 "The National Service Draft Ordinance"
 National_Service_Draft_Ordinance_2_desc:0 "The National Service Draft Ordinance is a supplement to the earlier National Total Mobilisation Ordinance, particularly its Article 4, which had enabled the Government to mobilise the labour force. The new Ordinance authorises the Government to conscript workers for war industries."
-economic_reform:0 "Economic Reform"
+economic_reform:0 "경제 개혁"
 
-JAP_Kakushinha_idea_1:0 "Kakushinha Faction"
-JAP_Kakushinha_idea_2:0 "Kakushinha Faction"
-JAP_Kakushinha_idea_3:0 "Kakushinha Faction"
-JAP_Kakushinha_idea_4:0 "Kakushinha Faction"
+JAP_Kakushinha_idea_1:0 "혁신파"
+JAP_Kakushinha_idea_2:0 "혁신파"
+JAP_Kakushinha_idea_3:0 "혁신파"
+JAP_Kakushinha_idea_4:0 "혁신파"
 
-JAP_yokuseiha_idea_1:0 "Yokuseiha Faction"
-JAP_yokuseiha_idea_2:0 "Yokuseiha Faction"
-JAP_yokuseiha_idea_3:0 "Yokuseiha Faction"
-JAP_yokuseiha_idea_4:0 "Yokuseiha Faction"
+JAP_yokuseiha_idea_1:0 "억제파"
+JAP_yokuseiha_idea_2:0 "억제파"
+JAP_yokuseiha_idea_3:0 "억제파"
+JAP_yokuseiha_idea_4:0 "억제파"
 
-JAP_kodoha_idea_1:0 "Kodoha Faction"
-JAP_kodoha_idea_3:0 "Kodoha Faction"
-JAP_kodoha_idea_4:0 "Kodoha Faction"
+JAP_kodoha_idea_1:0 "황도파"
+JAP_kodoha_idea_3:0 "황도파"
+JAP_kodoha_idea_4:0 "황도파"
 
-JAP_DEM_SCI_idea:0 "Academic Pluralism"
-JAP_DEM_fem_idea: "Woman's Suffrage"
-JAP_DEM_EDU_idea:0 "Democratic Education"
-JAP_DEM_CUL_idea:0 "Cultural Boom"
-ZAI_DENSHA:0 "Densha Zaibatsu"
-ZAI_research:0 "Funded R&D"
-JAP_BUR_RENT_idea:0 "Rent Control Act"
-JAP_BUR_LAND_idea:0 "The Agricultural Land Control Act"
-JAP_LAND_1:0 "The Land Reform Act"
-JAP_LAND_2:0 "The Land Reform Act"
-JAP_integration_taiwan:0 "Integration of Taiwan"
-JAP_integration_korea:0 "Integration of Korea"
-JAP_manpower_bonus_1:0 "Conscription Bonus"
-JAP_manpower_bonus_2:0 "Conscription Bonus"
-JAP_manpower_bonus_3:0 "Conscription Bonus"
-JAP_manpower_penalty:0 "Conscription Bonus"
-JAP_double_team_penalty:0 "Command Disagreements"
-JAP_MIL_DOC_DEF_idea_1:0 "Enhanced Communications"
-JAP_MIL_DOC_DEF_idea_2:0 "Organised Command Chain"
-JAP_MIL_DOC_DEF_idea_3:0 "Reorganised General Staff"
-JAP_MIL_DOC_FIR_idea_1:0 "Army Reorganisation"
+JAP_DEM_SCI_idea:0 "학문적 다원주의"
+JAP_DEM_fem_idea: "여성 참정권"
+JAP_DEM_EDU_idea:0 "민주주의 교육"
+JAP_DEM_CUL_idea:0 "문화적 융성"
+ZAI_DENSHA:0 "전철 재벌"
+ZAI_research:0 "연구개발기금"
+JAP_BUR_RENT_idea:0 "집세 관리법"
+JAP_BUR_LAND_idea:0 "농지 관리법"
+JAP_LAND_1:0 "토지 개혁법"
+JAP_LAND_2:0 "토지 개혁법"
+JAP_integration_taiwan:0 "타이완 통합"
+JAP_integration_korea:0 "한반도 통합"
+JAP_manpower_bonus_1:0 "추가 징병"
+JAP_manpower_bonus_2:0 "추가 징병"
+JAP_manpower_bonus_3:0 "추가 징병"
+JAP_manpower_penalty:0 "추가 징병"
+JAP_double_team_penalty:0 "지휘권 충돌"
+JAP_MIL_DOC_DEF_idea_1:0 "연락망 강화"
+JAP_MIL_DOC_DEF_idea_2:0 "지휘 체계 통일"
+JAP_MIL_DOC_DEF_idea_3:0 "참모진 개편"
+JAP_MIL_DOC_FIR_idea_1:0 "군 개편"
 JAP_MIL_DOC_FIR_idea_2:0 "Guerrilla Offensives"
-JAP_MIL_DOC_MOB_idea_1:0 "Overwhelming Firepower"
-JAP_jap_fighter_idea:0 "Japanese Fighters"
-JAP_jap_pilot_idea:0 "Japanese Pilots"
-JAP_ISO:0 "Fading Sun"
-JAP_bad_start:0 "Fading Democracy"
+JAP_MIL_DOC_MOB_idea_1:0 "압도적 화력"
+JAP_jap_fighter_idea:0 "일본제 전투기"
+JAP_jap_pilot_idea:0 "일본인 조종사"
+JAP_ISO:0 "저무는 해"
+JAP_bad_start:0 "저무는 민주주의"
 JAP_bad_start_desc:0 "Democracy in Japan sits on a knife edge. The political establishment is young; it has only been 50 years since Meiji Restoration. It may not be able to weather the incoming storm."
-JAP_no_army_focus:0 "Divided Army"
+JAP_no_army_focus:0 "분열된 군대"
 JAP_no_army_focus_desc:0 "The Japanese army is lacking in direction, there is infighting in the high command and there is no central military doctrine. All of this will impede any offensive action taken until it is resolved."
 
 ### Tooltips ###
